request code with proper type (key)

--- a/src/js/config.json
+++ b/src/js/config.json
@@ -27,6 +27,11 @@
     'createCode':
     {
       'uri': 'users/{glomeid}/sync.json',
+      'data': {
+        'synchronization': {
+          'kind': 'k',
+        },
+      },
       'method': 'POST'
     },
   },
